[tool.poetry]
name = "quickpi"
version = "0.1.0"
description = "The Python Non-standard third-party implementation"
authors = ["Zhihang-Liu <enterindex@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.780"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
